--- a/stirling-engine/template/template.html
+++ b/stirling-engine/template/template.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="../index.html">Stirling Engine</a>
+        <a class="navbar-brand" href="../index.html">Stirling Engine Project</a>
     </nav>
     <div class="p-5"></div>
     <div class="container-fluid pt-5">
@@ -27,11 +27,11 @@
                     <h1>Template</h1>
                 </div>
                 <div class="row">
-                    <div class="col-md-8 offset-md-2 py-2">
-                        <img src="templateImgTitle.JPG" class="fill-x">
+                    <div class="col-md-8 offset-md-2 pt-4">
+                        <img src="templateImgTitle.png" class="fill-x">
                     </div>
                 </div>
-                <p class="pt-5 pb-4">
+                <div class="pt-5 pb-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at libero quis ligula posuere imperdiet eget in mauris. Nulla dictum nisi efficitur metus scelerisque, vitae fermentum nisi dictum. Fusce nec odio elit. Praesent euismod euismod enim id vestibulum. Fusce efficitur diam at lectus venenatis gravida eleifend at augue. Pellentesque eget rutrum orci. Etiam vitae dapibus lorem. Curabitur bibendum facilisis lorem, ut sagittis est pretium sed. Fusce porttitor eros arcu, non aliquam libero semper sed. Vivamus ut nisi dolor. Integer eleifend eu nulla at consequat. Duis vel massa lacinia, vulputate quam ac, vestibulum arcu. Nam eleifend tellus dui, ac finibus felis fringilla et. Fusce dignissim, neque ut finibus pulvinar, eros lorem dapibus dui, at dapibus metus lacus efficitur lectus. Vivamus mollis metus sed odio dignissim malesuada.
 
                     Nulla ac posuere odio. Nam vehicula dui ac lorem cursus, ut imperdiet urna mollis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent vitae consequat ante. Duis eu laoreet magna. Phasellus fermentum nisi a nisl porttitor lacinia. Pellentesque in sapien quis augue placerat suscipit. Nam vehicula, nibh et vestibulum maximus, elit diam dapibus tellus, in imperdiet libero turpis ac dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis iaculis bibendum erat in aliquam. Pellentesque porttitor sit amet libero ac pretium. Praesent rhoncus, nunc ut efficitur mattis, ante est lacinia arcu, a efficitur libero tortor non justo. Curabitur interdum sagittis quam id iaculis.
@@ -41,16 +41,16 @@
                     Ut dapibus, turpis vel gravida vulputate, ex lectus laoreet sapien, vel sagittis velit lectus at nibh. Aliquam ut sagittis ex, vitae euismod magna. Nulla imperdiet aliquam feugiat. Aliquam non arcu scelerisque, lacinia diam id, hendrerit leo. Praesent et erat justo. In accumsan dolor mi, ac ultricies enim laoreet in. Curabitur euismod bibendum est, in tempor quam sodales in. Cras elementum vitae quam non pharetra. Nulla augue enim, aliquam nec convallis id, dictum eleifend enim. Phasellus volutpat, felis id egestas rhoncus, velit est suscipit ante, vitae dapibus dui risus semper eros. Cras lacus nisl, eleifend ac turpis quis, ornare suscipit massa. Praesent ex nisl, pharetra eu venenatis vitae, placerat vel ante. Donec nec odio feugiat, porta ante auctor, pellentesque augue. Quisque tincidunt velit id vehicula ornare. Phasellus nec mollis est. Pellentesque facilisis, metus sed gravida suscipit, purus mi scelerisque magna, quis semper massa turpis sed felis.
 
                     Nullam a nulla metus. Fusce eu maximus est. Nullam et magna eleifend, pretium quam ut, tempus ligula. Maecenas iaculis nisl neque, ac congue arcu suscipit eu. Ut quam mi, imperdiet vel dapibus sed, consequat at diam. Duis id neque libero. Nunc commodo leo sit amet metus tincidunt aliquam. Praesent ut lorem semper, fermentum metus et, sagittis elit. Suspendisse dignissim arcu eros, ac convallis urna elementum ut. Mauris laoreet dapibus velit quis condimentum. Etiam ac tortor maximus, eleifend sapien non, faucibus leo. Proin nulla augue, aliquam ut venenatis tincidunt, viverra vitae justo.
-                </p>
+                </div>
                 <div class="row">
                     <div class="col-md-8 offset-md-2 py-2">
-                        <img src="templateImgTitle.JPG" class="fill-x">
+                        <img src="templateImgTitle.png" class="fill-x">
                         <div class="text-center fst-italic fs-6 pt-2">
                             Lorem ipsum dolor sit amet circa 2019
                         </div>
                     </div>
                 </div>
-                <p class="pt-4 pb-5">
+                <div class="pt-4 pb-5">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at libero quis ligula posuere imperdiet eget in mauris. Nulla dictum nisi efficitur metus scelerisque, vitae fermentum nisi dictum. Fusce nec odio elit. Praesent euismod euismod enim id vestibulum. Fusce efficitur diam at lectus venenatis gravida eleifend at augue. Pellentesque eget rutrum orci. Etiam vitae dapibus lorem. Curabitur bibendum facilisis lorem, ut sagittis est pretium sed. Fusce porttitor eros arcu, non aliquam libero semper sed. Vivamus ut nisi dolor. Integer eleifend eu nulla at consequat. Duis vel massa lacinia, vulputate quam ac, vestibulum arcu. Nam eleifend tellus dui, ac finibus felis fringilla et. Fusce dignissim, neque ut finibus pulvinar, eros lorem dapibus dui, at dapibus metus lacus efficitur lectus. Vivamus mollis metus sed odio dignissim malesuada.
 
                     Nulla ac posuere odio. Nam vehicula dui ac lorem cursus, ut imperdiet urna mollis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent vitae consequat ante. Duis eu laoreet magna. Phasellus fermentum nisi a nisl porttitor lacinia. Pellentesque in sapien quis augue placerat suscipit. Nam vehicula, nibh et vestibulum maximus, elit diam dapibus tellus, in imperdiet libero turpis ac dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis iaculis bibendum erat in aliquam. Pellentesque porttitor sit amet libero ac pretium. Praesent rhoncus, nunc ut efficitur mattis, ante est lacinia arcu, a efficitur libero tortor non justo. Curabitur interdum sagittis quam id iaculis.
@@ -60,7 +60,7 @@
                     Ut dapibus, turpis vel gravida vulputate, ex lectus laoreet sapien, vel sagittis velit lectus at nibh. Aliquam ut sagittis ex, vitae euismod magna. Nulla imperdiet aliquam feugiat. Aliquam non arcu scelerisque, lacinia diam id, hendrerit leo. Praesent et erat justo. In accumsan dolor mi, ac ultricies enim laoreet in. Curabitur euismod bibendum est, in tempor quam sodales in. Cras elementum vitae quam non pharetra. Nulla augue enim, aliquam nec convallis id, dictum eleifend enim. Phasellus volutpat, felis id egestas rhoncus, velit est suscipit ante, vitae dapibus dui risus semper eros. Cras lacus nisl, eleifend ac turpis quis, ornare suscipit massa. Praesent ex nisl, pharetra eu venenatis vitae, placerat vel ante. Donec nec odio feugiat, porta ante auctor, pellentesque augue. Quisque tincidunt velit id vehicula ornare. Phasellus nec mollis est. Pellentesque facilisis, metus sed gravida suscipit, purus mi scelerisque magna, quis semper massa turpis sed felis.
 
                     Nullam a nulla metus. Fusce eu maximus est. Nullam et magna eleifend, pretium quam ut, tempus ligula. Maecenas iaculis nisl neque, ac congue arcu suscipit eu. Ut quam mi, imperdiet vel dapibus sed, consequat at diam. Duis id neque libero. Nunc commodo leo sit amet metus tincidunt aliquam. Praesent ut lorem semper, fermentum metus et, sagittis elit. Suspendisse dignissim arcu eros, ac convallis urna elementum ut. Mauris laoreet dapibus velit quis condimentum. Etiam ac tortor maximus, eleifend sapien non, faucibus leo. Proin nulla augue, aliquam ut venenatis tincidunt, viverra vitae justo.
-                </p>
+                </div>
             </div>
         </div>
     </div>
